--- a/texFiles/2.1_2_WL.tex
+++ b/texFiles/2.1_2_WL.tex
@@ -15,6 +15,9 @@ check for convergence. We performed more MCMC steps as long as convergence
 was not achieved. After convergence was achieved, we removed the
 burn-in portions of the MCMC chains and used the resulting MCMC chains as
 samples of the PDFs of the masses. \par 
+%We later draw mass estimates values of
+%the two subclusters from the same MCMC chainlink in our simulation to
+%capture any correlation between the mass values. 
 % this is from Jee13 section 3.5
 We make use of an effective redshift of $z_{\text{eff}} = 1.37$ or $D_{LS}
 / D_L = 0.276$ \citepalias{Jee13} and $g'\approx(1 + 0.79 \kappa)g$
