--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -19,7 +19,7 @@ polarization fraction as a function of $\alpha$.
 In particular, we refer to a model from \cite{E98} that would give the most
 conservative estimate on the upper bound of $\alpha$. This model we picked
 correspond to the strong field case with the relic being supported by
-magnetic pressure only, with a radio spectral index of $\alpha = 1$. 
+magnetic pressure only, with a radio spectral index of $1$. 
 This model predicts a maximum integrated polarization fraction of
 $\sim75\%$ when $\alpha = 0$ . From this model, the observed integrated
 polarization fraction of 33\% corresponds to $\mu_\alpha =  39\degree$. 
