--- a/texFiles/2.3_prior.tex
+++ b/texFiles/2.3_prior.tex
@@ -4,11 +4,14 @@ unphysical realizations via the application of prior probability.
 Our default Monte Carlo priors are described in D13 and in Appendix
 \ref{app: results}. We also examine the effects of applying 
 two priors derived based on the position and the integrated polarization
-fraction of the radio relic of El Gordo respectively. (* I actually removed
-the position prior section from the paper since the position prior does not
-provide tight constraint on the parameters). \par 
-(Not sure if the following fits best here but it is definitely an intro to
-the priors) 
+fraction of the radio relic of El Gordo respectively. 
+We considered other properties of the radio relic to be used as prior
+information, such as the physical location. Due to large uncertainty in the
+projection angle that affects the prior information derived from the prior
+information, we have not included the corresponding numerical results.
+\par 
+%(Not sure if the following fits best here but it is definitely an intro to
+%the priors) 
 El Gordo shows radio relics on the periphery of both subclusters
 \citepalias{M11}. The
 radio relic  of El Gordo was first mentioned in the Sydney University
@@ -112,30 +115,3 @@ speed of the SE relic nor the E relic from \citet{L13} for comparison.
 %prior applied. (Needs to update and label the figure better)} 
 %\end{figure}
 
-\begin{table*} 
-\begin{minipage}{180mm} 
-\caption{Table of the output PDF properties of the model variables and
-output variables from Monte Carlo simulation
-\label{tab:outputs}} 
-\begin{tabular}{@{}lccccccc@{}}
-\toprule 
-&&&Default priors & & &Default + position priors  \\ 
-\hline
-Variables & Units & Location & 68$\%$ CI $^{\dagger}$ & 95$\%$ 
-CI & Location & 68$\%$ CI  & 95$\%$ CI \\
-\hline
-$\alpha$ &(degree)&&&&&&\\ 
-\hline
-$TSC_0$&Gyr&&&&&&\\
-$TSC_1$&Gyr&&&&&&\\
-$T$&Gyr&&&&&&\\
-$d_{max}$ &Mpc&&&&&&\\
-$v_{3D}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&&&&&\\
-$v_{3D}(t_{col})$ & \kilo \meter~\second$^{-1}$ &&&&&&\\
-$d_{max}$ &Mpc&&&&&&\\
-$d_{3D}$ &Mpc&&&&&&\\
-\bottomrule 
-\end{tabular} 
-\footnotesize{\\$\dagger$ CI stands for credible interval} \\ 
-\end{minipage} 
-\end{table*} 
