--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -52,10 +52,10 @@
 We give constraints on the likelihood of the
 outgoing and returning merger scenarios by comparing the observed and the
 simulated position of the NW radio relic.
-This method depends the estimate of the
+This method depends on the estimate of the
 time evolution of the relic velocity, which gives the upper and lower
 bounds on the possible position of the relic for each scenario. The
-uncertainty of velocity stem depends on a number of physical quantities, including the
+velocity depends on a number of physical quantities, including the
 local gravitational potential, matter density, temperature, pressure among
 others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
 of the shock velocity requires detailed numerical simulation similar to
