--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -85,8 +85,8 @@ different ways of denoting the uncertainties do not affect the simulation.\\
 	\includegraphics[width = \linewidth]{confirmed_member_divide.png}
 	\caption{\label{fig:membership} The division of
 the member galaxies among the two subclusters of El Gordo by a spatial cut
-(green line) that is approximately perpendicular to the 2D merger axis
-\citepalias{M11}. The color bar shows the color mapping of the spectroscopic redshift of the
+(green line). 
+The color bar shows the color mapping of the spectroscopic redshift of the
 member galaxies.} 
 \end{figure}
 
