--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -5,10 +5,10 @@
 (make sure that there are charts showing the TSC and alpha and velocities
 before this figure or else it may be confusing to readers) 
 \begin{figure}
-	\includegraphics[width=\linewidth]{polar_prior_bounds.pdf}
+	\includegraphics[width=\linewidth]{default_prior_bounds.pdf}
 	\caption{Comparison of the observed position of the relic with the
 	predicted position from the two simulated merger scenarios, with
-	polarization prior applied to the PDFs.
+	default prior applied to the PDFs.
 	\label{fig: polarprior_bounds}}
 \end{figure}
 
