added new figure

--- a/texFiles/2.0_montecarlo_framework.tex
+++ b/texFiles/2.0_montecarlo_framework.tex
@@ -1,11 +1,13 @@
-For this analysis, we made use of the collisionless 
+For this analysis, we used the collisionless 
 dark-matter-only Monte Carlo modeling code written by Dawson (2013),
 hereafter \citepalias{D13}.  
 In the D13 code, the time evolution of the head-on merger was computed
 based on an analytical model assuming that the only dominant force is the gravitational attraction from
 the masses of two truncated Naverro-Frenk-White (hereafter NFW) DM halos.
 Other major assumptions for modeling systems with this code include
-negligible impact parameter and no self-interaction of dark matter.\par
+negligible impact parameter (cite M11???) and no self-interaction of dark matter.
+No mass accretion during the merger. 
+\par
 
 In the Monte Carlo simulation, many realizations of the collision is
 computed from the inputs of each realization, including
