--- a/texFiles/2.1_1_membership_redshift.tex
+++ b/texFiles/2.1_1_membership_redshift.tex
@@ -16,14 +16,24 @@ members in the NW subclusters and 35 members in the SE subclusters (See Figure
 mapping the world coordinates to pixel coordinates to avoid anamorphic distortion. 
 Then, we bootstrapped the biweight locations of the redshifts of the
 respective members in order to obtain the PDFs of the redshifts of each
-subcluster. 
-\citep{Sifon13} Using this method of determining subcluster members, the spectroscopic
+subcluster 
+\citep{Sifon13}. Using this method of determining subcluster members, the spectroscopic
 redshift of the subclusters were determined to be $z_{NW} = 0.86901 \pm
 0.00017$ and $z_{SE} = 0.87175 \pm 0.00019$, where the quoted numbers represent the biweight location and
 biweight scale respectively \citep{Beers90}. 
 These biweight location
 estimators are less susceptible to outliers than the mean and standard
-deviations. 
+deviations. These redshifts of the subclusters correspond to a relative
+velocity difference of $476$ km/s. 
+
+\begin{figure}
+	\includegraphics[width = \linewidth]{confirmed_member_divide.png}
+	\caption{\label{fig:membership} The division of
+the member galaxies among the two subclusters of El Gordo by a spatial cut
+(green line). The color bar shows the color mapping of the spectroscopic
+redshift of the member galaxies, with the redder end indicating higher
+redshift.} 
+\end{figure}
 
 %We confirm the existence of the subclusters of El Gordo from the 2D spatial
 %location of the galaxies, with the more massive cluster lying in the
