--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -9,20 +9,35 @@ created by the compressed intracluster medium during a merger
 This picture is consistent with a high polarization fraction perpendicular
 to this magnetic field along the relic. 
 \par
-The major assumption behind the design of our filter
+The major assumption behind the design of our prior
 is that the integrated polarization fraction is a monotonically
-decreasing function of $\alpha$. 
-This assumption is inspired by the class of models given by \cite{E98}, 
+decreasing function of $\alpha$ . 
+\begin{figure}
+	\includegraphics[width=\linewidth]{Ensslin_rep_polarization.pdf}
+	\caption{Predictions of polarization percentage of the radio relic at a
+		given projection angle from different models, reproduced from
+		\citealt{E98}. Each model assumes electrons producing the radio emission
+		to be accelerated inside
+		uniform magnetic field of various strength, indicated by strong or weak
+		field, with a corresponding spectral index of the radio emission
+		($\alpha_{rad}$), spectral index of the electrons ($\gamma$) and
+		compression ratio of the magnetic field ($R$).
+		We highlight the observed polarization percentage of the NW radio relic
+		of El Gordo by the dotted vertical line with the greyed out region
+		indicating the uncertainty.\label{fig:Ensslin_fig}}
+\end{figure}
+This assumption is inspired by the class of models given by \cite{E98}(See Figure \ref{fig:Ensslin_fig}), 
 which, despite various inputs for spectral indices and magnetic field strength, each predicts a monotonically decreasing integrated
 polarization fraction as a function of $\alpha$. 
 %This assumption is yet to be verified by cosmological simulations of radio relic. 
 In particular, we refer to a model from \cite{E98} that would give the most
 conservative estimate on the upper bound of $\alpha$. This model we picked
 correspond to the strong field case with the relic being supported by
-magnetic pressure only, with a radio spectral index of $1$. 
+magnetic pressure only, with a radio spectral index $\alpha_{rad} = 1$. 
 This model predicts a maximum integrated polarization fraction of
 $\sim75\%$ when $\alpha = 0$ . From this model, the observed integrated
-polarization fraction of 33\% corresponds to $\mu_\alpha =  39\degree$. 
+polarization fraction of $33\%\pm1\%$ corresponds to $\mu_\alpha =
+39\degree$. 
 %We consider 39\degree as an upper bound on the projection angle since this idealized model assume isotropic distribution of magnetic field and
 %electrons. 
 This  polarization fraction of $\sim 75\%$ predicted by \citep{E98} is
