--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -1,3 +1,4 @@
+\label{sec: sensitivityTests}
 We performed tests of how each of the output variables vary according to the
 choice of the cutoff of the polarization prior.
 We found that in the most extreme cases, shifting of the cutoff values by
