--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -52,9 +52,9 @@ galaxies: high redshift
 \begin{center} 
 \begin{tabular}{@{}lcccc}
 \hline Data & Units & $\mu$ & $\sigma$ & Ref\\ \hline
-$M_{200c_{\mathrm{NW}}}$ & $10^{14}$ M$_{\odot}$ & & & \citetalias{Jee13}\\ 
+$M_{200c_{\mathrm{NW}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ & & & \citetalias{Jee13}\\ 
 c$_{\mathrm{NW}}$ & / & & & \citetalias{Jee13} \\ 
-$M_{200c_{\mathrm{SE}}}$ & $10^{14}$ M$_{\odot}$ & & & \citetalias{Jee13}\\
+$M_{200c_{\mathrm{SE}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ & & & \citetalias{Jee13}\\
 $c_{\mathrm{SE}}$ & / & & & \citetalias{Jee13}\\ 
 $z_{\mathrm{NW}}$ & / & 0.86901 & 0.00017$^b$  & \citetalias{M11},
 \citetalias{Sifon13}\\
@@ -80,15 +80,6 @@ different ways of denoting the uncertainties do not affect the simulation.\\
 %-----------------------------------------------------------------------
 \subsubsection{Membership selection and redshift estimation of subclusters}
 \input{2.1_1_membership_redshift}
-
-\begin{figure}
-	\includegraphics[width = \linewidth]{confirmed_member_divide.png}
-	\caption{\label{fig:membership} The division of
-the member galaxies among the two subclusters of El Gordo by a spatial cut
-(green line). 
-The color bar shows the color mapping of the spectroscopic redshift of the
-member galaxies.} 
-\end{figure}
 
 %-----------------------------------------------------------------------
 \subsubsection{Weak lensing mass estimation} 
