--- a/texFiles/2.1_2_WL.tex
+++ b/texFiles/2.1_2_WL.tex
@@ -1,4 +1,3 @@
-%The input 
 We obtained the PDFs of the masses of the subclusters by doing a Monte
 Carlo Markov Chain (MCMC) analysis of the reduced shear from the
 weakly lensed background galaxies similar to \citet{Dawson12}. We computed the reduced shear signal
@@ -32,13 +31,14 @@ respective galaxy populations of  the two subclusters, which are at R.A. $=
 01$:02:51.68, Decl. = $-49$:15:04.40 and R.A. = $01$:02:38.38, Decl. =
 $-49$:16:37.64 for the NW and SE subclusters
 respectively \citepalias{Jee13}. The separations between the luminosity
-peaks and the estimated mass centroids of the subclusters are $X kpc$ and
-$X kpc$ respectively for the NW and SE subcluster.  (! Lori and Nick actually asked why we do not free
-the centroids like Jee 13)  The agreement between our analysis and \citepalias{Jee13} to within
+peaks and the estimated mass centroids of the subclusters are with several
+arcseconds, or around 30 kpc, for the both NW and SE subcluster 
+\citepalias{Jee13}. The agreement between our analysis and \citepalias{Jee13} to within
 the 68\% credible interval serves as a sanity check on the estimated masses. 
 %Other sanity check including the control of acceptance rate between 20\%
 %and 50\%. 
-
 The mass estimates from \citealt{Jee13} are $M_{200c} = 13.8~\pm~2.2\times
 10^{14}~h_{70}^{-1} M_{\sun}$ for the NW subcluster and $M_{200c} = 7.8~\pm
 2.0\times10^{14}~h_{70}^{-1} M_{\sun}$ for the SE subcluster. 
+We note that the results of the Monte Carlo simulation is not very
+sensitive to the estimated masses of the subclusters as discussed in section \ref{sec: sensitivityTests}.
