--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -99,7 +99,7 @@ there would be significant energy injected into the shock to speed up the
 shock such that the shock travels much faster than the collision speed of the subcluster. While the shock does not experience gravitational deceleration as a
 pressure wave, some dissipative processes may have slowed down the shock
 wave slightly as it propagated. By making use of a
-range of $\beta$ values, we examine the how the rate of slow down would
+range of $\beta$ values, we examine how the rate of slow down would
 give a different lower bound of the projected separation of the relic.   
 
 %We compare the bounds with the observed position of the NW relic  at RA =
