--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -197,7 +197,7 @@ of the merger scenario.
 
 \appendix
 
-\section{BAYESIAN FORMALISM OF DAWSON'S MONTE CARLO SIMULATION}
+\section{BAYESIAN PRIORS USED FOR DAWSON'S MONTE CARLO SIMULATION}
 \input{app_a_MCMAC_stat_formalism}
 
 \section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
