--- a/texFiles/abstract.tex
+++ b/texFiles/abstract.tex
@@ -1,7 +1,13 @@
 
 Merging galaxy clusters with radio relics provide rare insights to the merger
 dynamics as the relics are created by the
-violent merger process. We demonstrate one of the first uses of the
+violent merger process. 
+
+From the double radio relic observation and X-ray wake morphology, 
+it is believed that El Gordo is observed shortly after the first passage
+before reaching apo
+
+We demonstrate one of the first uses of the
 properties of the radio relic
 to reduce the uncertainties of the dynamical variables 
 and 3D configurations of a cluster merger, ACT-CL J0102-4915, El Gordo. 
@@ -16,11 +22,12 @@ dissociative mergers that can probe the self-interaction of dark matter.
 %As more and more cluster mergers are being discovered using
 %the radio relic emission detected in upcoming large scale radio surveys,
 We employ a Monte Carlo simulation to investigate the three-dimensional (3D)
-configuration and dynamics of El Gordo. We give a summary of the inferred
+configuration and dynamics of El Gordo. 
+We give a summary of the inferred
 dynamical variables. By making use the polarization, velocity and position
 of the radio relic, we are able to confirm at X $\sigma$ that the subclusters of El Gordo are moving away from each other. We find that
 the 3D merger speed of El Gordo to be $\sim3000~\kilo\meter~
-\second^{-1}$, which is still consistent with the low line-of-sight
+\second^{-1}$ (or in projected velocity = ), which is still consistent with the low line-of-sight
 velocity of $\sim600~\kilo\meter~\second^{-1}$ based on the inferred time-since-collision ($TSC$ = Gyrs) and
 the projection angle (\(\alpha = 41^{\circ}\pm \)). We put our estimates of $TSC$ and $\alpha$ into context by relating them to existing observations of El Gordo. 
 Finally, we compare our simulation result of El Gordo to the simulation
