updates configuration plot among other changes to the redshift-vel-dispersion section

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -87,7 +87,7 @@ index gradient and are identified as radio relic created from a merger.\par
 %\item  
 %\end{itemize}
 \begin{figure}
-	\includegraphics[width=\linewidth]{ElGordo.png}
+	\includegraphics[width=\linewidth]{ElGordo.pdf}
 	\caption{Configuration of El Gordo (to decide which figure to use,
 	this one is from Lindner et al.) \label{fig:config}}
 \end{figure}
