--- a/texFiles/2.0_montecarlo_framework.tex
+++ b/texFiles/2.0_montecarlo_framework.tex
@@ -62,7 +62,7 @@ constraints on the dynamical variables into account by
 examining the resulting physical variables against the physical limits and
 excluding realizations that would produce impossible values. We refer to this
 process of excluding unphysical realizations by applying suitable priors. 
-Even though we denote the priors for one dimensions each, 
+Even though we denote the priors for one dimension at a time, 
 the correlations between different variables are taken into account
 properly due to how we throw away all the variables of problematic
 realizations. 
