--- a/texFiles/4.2_other_studies.tex
+++ b/texFiles/4.2_other_studies.tex
@@ -2,6 +2,15 @@ Compare to \citet{L13}.
 Compare to \citet{Donnert13} for their best fit scenario.
 
 
+Initial velocity is higher for the hydrodynamical simulations than our
+Monte Carlo simulations.
+
+This is reflected by the low probability for our Monte Carlo simulations
+to reach $d_max$. This is an aspect that should be further investigated in
+future cosmological simulations.
+ 
+
+
 
 
 
