--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -47,34 +47,7 @@ galaxies: high redshift
 \subsection{Inputs of the Monte Carlo simulation}
 \label{sec: inputs}
 \setcounter{table}{0} 
-\begin{table} 
-\caption{Properties of the sampling PDFs of the Monte Carlo simulation }  
-\begin{center} 
-\begin{tabular}{@{}lcccc}
-\hline Data & Units & $\mu$ & $\sigma$ & Ref\\ \hline
-$M_{200c_{\mathrm{NW}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ & & & \citetalias{Jee13}\\ 
-c$_{\mathrm{NW}}$ & / & & & \citetalias{Jee13} \\ 
-$M_{200c_{\mathrm{SE}}}$ & $10^{14} h_{70}^{-1}$ M$_{\odot}$ & & & \citetalias{Jee13}\\
-$c_{\mathrm{SE}}$ & / & & & \citetalias{Jee13}\\ 
-$z_{\mathrm{NW}}$ & / & 0.86901 & 0.00017$^b$  & \citetalias{M11},
-\citetalias{Sifon13}\\
-$z_{\mathrm{SE}}$ & / & 0.87175 & 0.00019$^b$  & \citetalias{M11},
-\citetalias{Sifon13}\\ 
-d$_{\mathrm{proj}}$ & Mpc & & & \citetalias{Jee13} \\ 
-\hline
-\end{tabular} 
-\end{center} 
-\label{tab:inputs} 
-\footnotesize{
-$^a$This $\sigma$ corresponds to the $68\%$ central Bayesian
-credible interval computed from the posterior probability of our MCMC
-analysis.\\
-$^b$This $\sigma$ corresponds to the biweight scale. \\
-$^c$We use the full PDFs as the inputs of our simulation so
-different ways of denoting the uncertainties do not affect the simulation.\\ 
-%\textbf{References:} (1) Jee et al. 2013 (2) Menanteau et al. 2011}
-}
-\end{table}
+\input{input_table}
 
 
 %-----------------------------------------------------------------------
